# etl-dashboard-project-1

./: .gitignore  LICENSE  README.md  header_mappings.json  header_mappings_ai.json  pyproject.toml
data/processed/: bd-importadores.csv  campos_hom_data.json  campos_hom_tmp.json  datos3cv_2013-2026.csv
notebooks/: 01_exploracion_data.ipynb
src/: extraction.py  header_identify_processing.py  header_standarizer_llm.py  header_standarizer_ruler.py  importer_standarizer.py  load_to_gcp.py  transform-pipeline.py  transform_headers-v2.py  transform_headers.py  transform_headers_utils.py  transform_pipeline.py  transformation.py
tmp/: datos_tmp.csv
