[project]
name = "etl-dashboard"
version = "0.1.0"
description = "Creacion de pipeline para realizar una ETL y construir un dashboard"
authors = [
    {name = "Ariel Nuñez",email = "ariel.nunez.sa@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
