[project]
name = "etl-dashboard"
version = "0.1.0"
description = "Creacion de pipeline para realizar una ETL y construir un dashboard"
authors = [
    {name = "Ariel Nuñez",email = "ariel.nunez.sa@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
