[project]
name = "etl-dashboard"
version = "0.1.0"
description = "Creacion de pipeline para realizar una ETL y construir un dashboard"
authors = [
    {name = "Ariel Nuñez",email = "ariel.nunez.sa@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "google-cloud-storage (>=3.8.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "transformers==4.40.2",
    "torch>=2.2",
    "accelerate (>=1.12.0,<2.0.0)",
]


[tool.poetry]
package-mode = false


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
